hw6 1st